AC_INIT([paradox], [0.1], [xiphoseer@xiphos.ia])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_SILENT_RULES
AC_PROG_CXX
AC_PROG_CC

AC_CHECK_FUNCS([mkdir])
AC_CHECK_HEADERS([stdint.h])
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([string.h])
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADER_STDBOOL
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for Modules.
PKG_CHECK_MODULES(GRAPHICSMAGICKXX, "GraphicsMagick++", [ HAVE_GRAPHICSMAGICKXX=yes ], [ ])
PKG_CHECK_MODULES(IMAGEMAGICKXX,    "ImageMagick++",    [ HAVE_IMAGEMAGICKXX=yes ], [ ])
if   test -n "$HAVE_GRAPHICSMAGICKXX"; then
  MAGICKXX_CFLAGS="$GRAPHICSMAGICKXX_CFLAGS"
  MAGICKXX_LIBS="$GRAPHICSMAGICKXX_LIBS"
elif test -n "$HAVE_IMAGEMAGICKXX"; then
  MAGICKXX_CFLAGS="$IMAGEMAGICKXX_CFLAGS"
  MAGICKXX_LIBS="$IMAGEMAGICKXX_LIBS"
fi
AC_SUBST(MAGICKXX_CFLAGS)
AC_SUBST(MAGICKXX_LIBS)
# Source: https://gist.github.com/kou1okada/8419424

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
])
AC_OUTPUT